# MarsRover2017

./: .gitignore  .gitlab-ci.yml  99-rover-camera.rules  README.md  libuvc_cam.launch
Workspace/: 1_systems_full.launch  2_autonomy_full.launch  3_can_full.launch  4_cameras_full.launch  full_launch.launch  full_launch_24G.launch  full_launch_900M.launch  full_launch_tethered.launch  local_launch.launch  pg_cam.launch
Workspace/cfg/: cam0_gimbal.cfg  cam1_firefly.cfg
Workspace/install/: .rosinstall  _setup_util.py  setup.sh
Workspace/logs/socketcan_interface/: build.make.000.log.stderr  build.make.001.log.stderr  build.make.002.log.stderr
Workspace/src/: webpack.config.js
Workspace/src/Rover-GUI/: notes.txt
Workspace/src/Rover-Gui-New/: package.json  webpack.config.js
Workspace/src/arm_control/: CMakeLists.txt  CMakeLists.txt~  arm_implementation_details.txt  package.xml  package.xml~
Workspace/src/arm_control/launch/: arm_control.launch  arm_control.launch~
Workspace/src/arm_control/src/: arm_control.cpp  arm_control.py  arm_controlv1.cpp  arm_controlv2.cpp  arm_controlv3.cpp  arm_controlv4.cpp  listener.py  listener_arm.cpp  talker_arm.cpp  talker_arm.cpp~  testPublisher.cpp
Workspace/src/client/: rob.html
Workspace/src/components/: Wheel.js  (+2 more)
ball-tracking/: ball-tracking-demo.py
docker/: docker-build.sh
docker/trusty/: Dockerfile
docker/xenial/: Dockerfile
mds_to_latlon/: convert.py
pan/: instructions.txt  pano
relay/: relay.ino
scripts/: cpplint.bash  ros_install.bash
udev/: 90-roboteq.rules  91-microstrain.rules  99-rover.rules
(+185 files in other folders)
